<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/AIR_FUEL_RATIO_TITLE"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/AIR_FUEL_RATIO"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/AIR_FUEL_RATIO"
            android:textSize="12sp"
            android:layout_weight="1"
            android:background="@color/control_background"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/FUEL_CONSUMPTION_RATE_TITLE"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/FUEL_CONSUMPTION_RATE"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/FUEL_CONSUMPTION_RATE"
            android:textSize="12sp"
            android:layout_weight="1"
            android:background="@color/control_background"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/FUEL_TYPE_TITLE"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/FUEL_TYPE"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/FUEL_TYPE"
            android:textSize="12sp"
            android:layout_weight="1"
            android:background="@color/control_background"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/FUEL_LEVEL_TITLE"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/FUEL_LEVEL"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/FUEL_LEVEL"
            android:textSize="12sp"
            android:layout_weight="1"
            android:background="@color/control_background"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/WIDEBAND_AIR_FUEL_RATIO_TITLE"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/WIDEBAND_AIR_FUEL_RATIO"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/WIDEBAND_AIR_FUEL_RATIO"
            android:textSize="12sp"
            android:layout_weight="1"
            android:background="@color/control_background"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>