<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/BAROMETRIC_PRESSURE_TITLE"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/BAROMETRIC_PRESSURE"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/BAROMETRIC_PRESSURE"
            android:textSize="12sp"
            android:layout_weight="1"
            android:background="@color/control_background"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/FUEL_PRESSURE_TITLE"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/FUEL_PRESSURE"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/FUEL_PRESSURE"
            android:textSize="12sp"
            android:layout_weight="1"
            android:background="@color/control_background"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/FUEL_RAIL_PRESSURE_TITLE"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/FUEL_RAIL_PRESSURE"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/FUEL_RAIL_PRESSURE"
            android:textSize="12sp"
            android:layout_weight="1"
            android:background="@color/control_background"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/INTAKE_MANIFOLD_PRESSURE_TITLE"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/INTAKE_MANIFOLD_PRESSURE"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/INTAKE_MANIFOLD_PRESSURE"
            android:textSize="12sp"
            android:layout_weight="1"
            android:background="@color/control_background"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>